fixed info box overlap

--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
 	display: flex;
 	padding: 30px 20px 0 20px;
 	position: relative;
-	z-index: 8;
+	z-index: 50;
 	background: #fafafa;
 }
 header #search {
@@ -193,7 +193,7 @@ header #profile #information {
 	box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.5), 0 0 0 1px rgba(0, 0, 0, 0.08);
 	box-sizing: border-box;
 	opacity: 1;
-	z-index: 10;
+	z-index: 100;
 	display: none;
 	flex-wrap: wrap;
 	align-content: flex-start;
